<resources>
    <string name="app_name">Calculator Sederhana</string>
    <string name="hint_textview1">Masukkan Nilai 1</string>
    <string name="hint_textView2">Masukkan Nilai 2</string>
    <string name="btnTambah">Tambah + </string>
    <string name="btnKurang">Kurang -</string>
    <string name="btnBagi">Bagi /</string>
    <string name="btnKali">Kali x</string>
    <string name="textViewHasil">Hasil Nanti Keluar disini !</string>
</resources>
